# lammps-user-pace

./: .gitignore  CMakeLists.txt  README.md
ML-PACE/: ace_abstract_basis.h  ace_c_basis.cpp  ace_c_basisfunction.h  ace_calculator.cpp  ace_calculator.h  ace_couplings.cpp  ace_couplings.h  ace_evaluator.cpp  ace_evaluator.h  ace_radial.cpp  ace_radial.h  ace_recursive.cpp  ace_version.h  pair_pace.cpp  pair_pace.h  ships_radial.cpp  ships_radial.h
ML-PACE/ace/: ace_b_basis.cpp  ace_b_basis.h  ace_b_basisfunction.cpp  ace_b_evaluator.cpp  ace_b_evaluator.h  ace_clebsch_gordan.cpp  ace_clebsch_gordan.h  grace_fs_evaluator.cpp  grace_fs_evaluator.h  tdace_calculator.cpp  tdace_calculator.h  tdace_evaluator.cpp  tdace_evaluator.h
ML-PACE/ace-evaluator/: ace_abstract_basis.h  ace_array2dlm.h  ace_arraynd.h  ace_c_basis.cpp  ace_c_basis.h  ace_c_basisfunction.h  ace_evaluator.cpp  ace_evaluator.h  ace_radial.cpp  ace_recursive.cpp  ace_version.h  acejl_radial.cpp  acejl_radial.h
USER-PACE/: ace_abstract_basis.cpp  ace_abstract_basis.h  ace_array2dlm.h  ace_arraynd.h  ace_c_basis.cpp  ace_c_basis.h  ace_c_basisfunction.h  ace_evaluator.cpp  ace_flatten_basis.cpp  ace_flatten_basis.h  ace_radial.cpp  ace_radial.h  ace_recursive.cpp  ace_recursive.h  ace_spherical_cart.cpp  ace_types.h  ace_version.h  pair_pace.h  ships_radial.cpp  ships_radial.h
cmake/: Findcnpy.cmake  pace-config.cmake.in
cnpy/: CMakeLists.txt
python/: CMakeLists.txt  README.md  REFACTORING_SUMMARY.md  multispecies_basisextension.py  pyproject.toml  setup.py
python/helpers/: ace_c_basis_binding.cpp
python/lammps_pyace/: __init__.py  basisextension.py  multispecies_basisextension.py  multispecies_basisextension_v2.py  pyace_whitelist_pa_rpi.pckl
wigner-cpp/: CMakeLists.txt
yaml-cpp/: CMakeLists.txt
yaml-cpp/include/yaml-cpp/: anchor.h  binary.h  depthguard.h  emitfromevents.h  emitter.h  emitterdef.h  emittermanip.h  emitterstyle.h  eventhandler.h  exceptions.h  mark.h  null.h  ostream_wrapper.h  parser.h  stlemitter.h  traits.h
yaml-cpp/include/yaml-cpp/contrib/: anchordict.h  graphbuilder.h
yaml-cpp/include/yaml-cpp/node/: convert.h  emit.h  impl.h  iterator.h  node.h  parse.h  ptr.h  type.h
yaml-cpp/include/yaml-cpp/node/detail/: impl.h  iterator.h  iterator_fwd.h  memory.h  node.h  node_data.h  node_iterator.h  node_ref.h
yaml-cpp/src/: binary.cpp  collectionstack.h  convert.cpp  depthguard.cpp  directives.cpp  directives.h  emit.cpp  emitfromevents.cpp  emitter.cpp  emitterstate.cpp  emitterstate.h  emitterutils.cpp  emitterutils.h  exceptions.cpp  exp.cpp  exp.h  indentation.h  memory.cpp  node.cpp  node_data.cpp  nodebuilder.cpp  nodebuilder.h  nodeevents.cpp  nodeevents.h  null.cpp  ostream_wrapper.cpp  parse.cpp  parser.cpp  ptr_vector.h  regex_yaml.cpp  regex_yaml.h  regeximpl.h  scanner.cpp  scanner.h  scanscalar.cpp  scanscalar.h  scantag.cpp  scantag.h  scantoken.cpp  setting.h  (+10 more)
yaml-cpp/src/contrib/: graphbuilder.cpp  graphbuilderadapter.cpp  graphbuilderadapter.h
