[build-system]
requires = [
    "setuptools>=64",
    "wheel", 
    "pybind11>=2.6.0", 
    "cmake>=3.12", 
    "ninja",
    "versioneer[toml]"
]
build-backend = "setuptools.build_meta"

# Tool configurations for development

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "src/pyace/_version.py"
versionfile_build = "pyace/_version.py"
tag_prefix = ""
parentdir_prefix = ""

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "ase.*",
    "pandas.*", 
    "ruamel.*",
    "psutil.*",
    "sklearn.*",
]
ignore_missing_imports = true
